# rubrum-svg_rs

./: AGENTS.md  Cargo.toml  README.md
examples/rubrum_editor_rs/: AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html  style.css
examples/rubrum_editor_rs/src/: lib.rs
examples/rubrum_transit_viewer_rs/: Cargo.toml  README.md  Trunk.toml  index.html  style.css
examples/rubrum_transit_viewer_rs/src/: lib.rs
examples/rubrum_viewer_rs/: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html  style.css
examples/rubrum_viewer_rs/src/: lib.rs
examples/rubrum_viewer_wasm_rs/: Cargo.toml  README.md  avante.md
examples/rubrum_viewer_wasm_rs/src/: lib.rs
src/: lib.rs
src/primitive/: dom.rs  emit.rs  mod.rs  text.rs
src/spec/: aspect_grid.rs  aspects.rs  band.rs  declination_map.rs  emit.rs  houses.rs  mod.rs  placement_boundary_ticks.rs  placements.rs  render.rs  signs.rs  ticks.rs
tests/: svg_spec_aspect_lines.rs
