[package]
name = "rubrum_editor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared types/spec/theme/layout/data live in the Cairo crate, but we disable Cairo so this stays wasm-friendly.
#rubrum_cairo = { path = "/home/jon/Code/github/jgrowl/rubrum_cairo_rs", default-features = false }

# Pure-SVG renderer crate (Cairo-free; wasm-friendly).
rubrum_svg = "*"
rubrum_render = "*"

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8"

wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Panic messages in the browser console.
console_error_panic_hook = "0.1"

# Minimal browser bindings.
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "DomRect",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "Node",
  "NodeList",
  "PointerEvent",
  "SvgsvgElement",
  "Window",
] }
