[package]
name = "rubrum_transit_viewer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rubrum_render = "*"
rubrum_svg = "*"
rubrum = "*"

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8"

wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

