[package]
name = "rubrum_viewer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared types/spec/theme/layout/data via the top-level crate, but keep this viewer wasm-friendly.
#rubrum_cairo = { path = "/home/jon/Code/github/jgrowl/rubrum_cairo_rs", default-features = false }
rubrum_render = "*"

# Pure-SVG renderer (Cairo-free; wasm-friendly).
rubrum_svg = "*" 

rubrum = "*" 

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# We parse the chart JSON produced by the WASI ephemeris module.

wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

console_error_panic_hook = "0.1"

web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "Node",
  "Window",
] }
