[package]
name = "rubrum_viewer_wasm"
version = "0.1.0"
edition = "2024"

[lib]
# wasm-pack expects a cdylib for wasm-bindgen.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Keep dependencies wasm-compatible.
rubrum_render = "*" 
rubrum_svg = "*"
rubrum = "*" 
rubrum_viewer_wasm = "*"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
toml = "0.8"

wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

console_error_panic_hook = "0.1"

# Note: web-sys is optional for this crate; keep it light. Add features as needed.
web-sys = { version = "0.3", features = ["console"] }

# # rubrum_* crates are not published to crates.io (yet), but some downstream crates
# # reference them by name. Patch crates.io resolution so `wasm-pack` / `cargo metadata`
# # can resolve everything when building this crate in isolation.
# [patch.crates-io]
# rubrum = { path = "/home/jon/Code/github/jgrowl/rubrum_rs" }
# rubrum_render = { path = "/home/jon/Code/github/jgrowl/rubrum_render_rs" }
